OPHJOD-3061: Fix Koski import
Koski import can fail if data contains items with empty or missing names.